overflow behavior correction

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@ body{
 	animation: gradient 7.5s ease infinite;
   padding: 0;
   font-family: 'mongoose';
-  overscroll-behavior: 'contain';
+  overscroll-behavior: 'none';
 }
 
 html{
